# fastapi_version_openapi

./: .gitignore  README.md  pyproject.toml
app/: build_spec.py  main.py
docs/0.1.0/: openapi.yaml
docs/0.2.0/: openapi.yaml
docs/2023-01-release/: openapi.yaml
